@@ -1,3 +1,11 @@
+2005-06-28 21:56  Andrej Kacian <andrej@kacian.sk>
+	* src: silc.h, clientops.c, silc-channel.c, silc-presence.h,
+	       clientops-notify.c, silc-client.c, support.c, support.h,
+	       silc-local-presence.c, silc-local-presence.h, base64.c,
+	       base64.h, Makefile.am, silc.c, silc-gateway-connection.c,
+	       silc-gateway-connection.h, silc-presence.c: Custom SILC keys
+	       can now be used by clients.
+
 2005-06-20 14:03  Andrej Kacian <andrej@kacian.sk>
 	* src: clientops.c, silc-channel.c, silc-presence.[ch],
 	  clientops-notify.c: Moved userhost string creation to a separate
